--- a/index.html
+++ b/index.html
@@ -3202,7 +3202,7 @@ flexibility(document.documentElement);
 												data-id="b23e85e" data-element_type="widget"
 												data-widget_type="image.default">
 												<div class="elementor-widget-container">
-													<a href="https://x.com/Sanic_Pulse" target="_blank">
+													<a href="https://x.com/SANIC_Pulse" target="_blank">
 														<img decoding="async" width="318" height="264"
 															src="fonts/shouhuitetw1-01.svg"
 															class="attachment-large size-large wp-image-18" alt> </a>
@@ -4045,7 +4045,7 @@ flexibility(document.documentElement);
 													data-id="4ad0410" data-element_type="widget"
 													data-widget_type="image.default">
 													<div class="elementor-widget-container">
-														<a href="https://x.com/Sanic_Pulse" target="_blank">
+														<a href="https://x.com/SANIC_Pulse" target="_blank">
 															<img decoding="async" width="318" height="264"
 																src="fonts/shouhuitetw1-01.svg"
 																class="attachment-large size-large wp-image-18" alt>
