--- a/index.html
+++ b/index.html
@@ -3213,7 +3213,7 @@ flexibility(document.documentElement);
 												data-widget_type="image.default">
 												<div class="elementor-widget-container">
 													<a style="cursor: pointer;"
-														href="https://pump.tires/token/0x62f8BFf4Bd6Db044a791e9dd7dfD902C672356e8">
+														href="https://pump.tires/token/">
 														<img loading="lazy" decoding="async" width="507" height="548"
 															style="border-radius: 50%;width: 48px;"
 															src="images/pump.png"
